--- a/Snake/SnakeHard/style.css
+++ b/Snake/SnakeHard/style.css
@@ -19,7 +19,7 @@ html, body {
     gap: 2px;
     margin: 5% auto;     /* centré automatiquement */
     background-color: black;
-    border: 5px solid rgb(179, 0, 255);
+    border: 5px solid rgb(42, 255, 0);
     border-radius: 10px;
     width: 420px;
     height: 420px;
@@ -44,6 +44,10 @@ html, body {
     font-size: 24px;
     color: white;
     font-weight: 500;
+    background-color: #333;
+    padding: 5px;
+    border-radius: 10px;
+    border: 5px solid rgb(42, 255, 0);
 }
 
 #Screen {
