Ajout de Snack hard

--- a/Snake/Snake/style.css
+++ b/Snake/Snake/style.css
@@ -1,26 +1,30 @@
-/* Global */
 html, body {
     margin: 0;
     padding: 0;
-    width: fit-content;
-    height: fit-content;
-    background-color: black; /* Fond global noir */
+    width: 100%;
+    height: 100%;
+    background-color: black;
     font-family: "Roboto", sans-serif;
+
+    display: flex;              /* centrage horizontal + vertical */
+    justify-content: center;
+    align-items: center;
 }
+
 
 #GameBoard {
     display: grid;
     grid-template-columns: repeat(10, 40px);
     grid-template-rows: repeat(10, 40px);
     gap: 2px;
-    margin: 5% auto;
+    margin: 5% auto;     /* centré automatiquement */
     background-color: black;
-    border: 5px solid rgb(179, 0, 255); /* contour visible */
-    border-radius: 10px;      /* coins arrondis */
+    border: 5px solid rgb(179, 0, 255);
+    border-radius: 10px;
     width: 420px;
     height: 420px;
-    margin-left: 125%;
 }
+
 
 
 /* Cases */
@@ -32,4 +36,22 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#ScoreBoard {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 24px;
+    color: white;
+    font-weight: 500;
+    background-color: #333;
+    padding: 5px;
+    border-radius: 10px;
+    border: 5px solid rgb(179, 0, 255);
+}
+
+#Screen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
