--- a/css/header_style.css
+++ b/css/header_style.css
@@ -152,3 +152,8 @@ header nav {
 .container {
     transition: transform 0.3s ease;
 }
+
+#equipe{
+    width: 200px;
+    display: inline-block;
+}
